--- a/mchallenge/.settings/org.eclipse.wst.common.component
+++ b/mchallenge/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="mchallenge.war"/>
+        <property name="context-root" value="mchallenge"/>
         <property name="java-output-path" value="/mchallenge/target/classes"/>
     </wb-module>
 </project-modules>
